checking parity and placements for stacks